fix the alignment of copyright text

--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ hr.socket {
     margin: 0 auto;
   }
   .copyright {
-    font-size: .8rem;
+    font-size: .6rem;
   }
   .game-card {
     min-width: 441px;
